Fix device scale factor for interstitials.

Implement GetScreenInfo() and UpdateDeviceScaleFactor() for
InterstitialPageImpl so that interstitial pages get the correct device
scale factor both when they're initially created, and also if the window
they're in gets dragged between displays with different device scale
factors.

BUG=637462
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2265213002
Cr-Commit-Position: refs/heads/master@{#414189}

Former-commit-id: 26840c53c281e98b2f33a5e94aa7f04d372eb9c6