content/browser/frame_host/interstitial_page_impl.cc
@@ -943,4 +943,24 @@ TextInputManager* InterstitialPageImpl::GetTextInputManager() {
                                         ->GetTextInputManager();
 }
 
+void InterstitialPageImpl::GetScreenInfo(blink::WebScreenInfo* screen_info) {
+  WebContentsImpl* web_contents_impl =
+      static_cast<WebContentsImpl*>(web_contents_);
+  if (!web_contents_impl) {
+    WebContentsView::GetDefaultScreenInfo(screen_info);
+    return;
+  }
+
+  web_contents_impl->GetView()->GetScreenInfo(screen_info);
+}
+
+void InterstitialPageImpl::UpdateDeviceScaleFactor(double device_scale_factor) {
+  WebContentsImpl* web_contents_impl =
+      static_cast<WebContentsImpl*>(web_contents_);
+  if (!web_contents_impl)
+    return;
+
+  web_contents_impl->UpdateDeviceScaleFactor(device_scale_factor);
+}
+
 }  // namespace content
